--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,6 @@
         "php": "^5.3.3 || ^7.0"
     },
     "autoload": {
-        "psr-4": {
-            "relbraun\\": "/"
-        }
+        "classmap": ["mp4info/MP4Info.php"]
     }
 }
